
*****************************
   MyBlitzortung Changelog
*****************************

Version 0.7.6-dev (2012-03-28)
-------------------------------
- new: GEOS projection method (for satellite images)
- fix: allow longer contry names


Version 0.7.5b (2012-03-24)
-------------------------------
- fixed installation


Version 0.7.5a (2012-03-16)
-------------------------------
- fixed update


Version 0.7.5 (2012-03-16)
-------------------------------
- Default timezone now UTC!
- moved europe maps to images/maps_europe
- added map for Oceania and New Zealand to images/maps_oceania/
- new: option enable database keys for faster lightning search/drawing
    --> uses some disk space
    --> disabled by default
	--> you should enable if you have archived lightning-data and enough disk space
	--> have a look on your mysql key-cache
- new: residual time graphs (by andreas)
- new: xy-graphs for signals (by andreas)
- new: added a clean config.php.example
- new: possibility to view signals of a strike from other participated stations
- new: you can now set the google maps API parameters (i.e. for api-key or sensor-state)
- improved: partial file download for raw data, default interval is 10 minutes now
- improved: behaviour with lightning search
- fix: cleaned and fixed install
- fix: update longtime-statistics only when station is active
- fix: user cookie behaviour, session time display
- dev: added folder for classes
- dev: added Database, Timestamp and SignalGraph classes
- dev: added channels/ntime column to database-table "raw"


Version 0.7.4a (2012-02-10)
---------------------------
- new: italian translation (thx to Stefano Cirilli - www.meteo.units.it)
- new: copyright for translators
- fix: station statistics
- fix: changed signal import folder name to "raw_data"

Version 0.7.4 (2012-02-04)
--------------------------
- IMPORTANT: changes for accessing new Blitzortung.org raw data (for signals) 