@@ -6,6 +6,7 @@
 Version 0.7.6-dev (2012-03-28)
 -------------------------------
 - new: GEOS projection method (for satellite images)
+- new: auto download of external pictures/maps (i. e. satellite)
 - fix: allow longer contry names
 
 
